# OptionalArgument

./: .clang-format  .gitignore  CMakeLists.txt  README.org  blogpost.org  meson.build
examples/: CMakeLists.txt  algorithm_usage_example.cpp  check_copy_move.cpp  flag_example.cpp  hello.cpp  meson.build  named_assert_example.cpp  named_std_function_example.cpp  plot_usage_example.cpp  struct_example.cpp
src/: meson.build
src/OptionalArgument/: hello.cpp  hello.hpp  meson.build  optional_argument.hpp
test/: CMakeLists.txt  hello.cpp  meson.build  optional_argument.cpp
