executable('algorithm_usage_example',
	   'algorithm_usage_example.cpp',
	   dependencies : [OptionalArgument_dep])

executable('plot_usage_example',
	   'plot_usage_example.cpp',
	   dependencies : [OptionalArgument_dep])

executable('flag_example',
	   'flag_example.cpp',
	   dependencies : [OptionalArgument_dep])

executable('struct_example',
	   'struct_example.cpp',
	   dependencies : [OptionalArgument_dep])
